WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72446
TestWebKitAPI should not put its resources in the root products directory
https://bugs.webkit.org/show_bug.cgi?id=72446
Summary
TestWebKitAPI should not put its resources in the root products directory
Sam Weinig
Reported
2011-11-15 17:37:01 PST
TestWebKitAPI should not put its resources in the root products directory
Attachments
Patch
(6.05 KB, patch)
2011-11-15 17:38 PST
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-11-15 17:38:31 PST
Created
attachment 115288
[details]
Patch
Sam Weinig
Comment 2
2011-11-15 17:41:42 PST
Committed
r100380
: <
http://trac.webkit.org/changeset/100380
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug