TestWebKitAPI should not put its resources in the root products directory https://bugs.webkit.org/show_bug.cgi?id=72446

Reviewed by Anders Carlsson.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
Change the copy resources phase to place the resources in a TestWebKitAPI.resources
directory.

* TestWebKitAPI/Tests/WebKit2ObjC/WKBrowsingContextLoadDelegateTest.mm:
(TEST_F):
* TestWebKitAPI/Tests/mac/DOMRangeOfString.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/mac/DeviceScaleFactorOnBack.mm:
(TestWebKitAPI::DeviceScaleFactorOnBack::url):
* TestWebKitAPI/Tests/mac/DynamicDeviceScaleFactor.mm:
(TestWebKitAPI::DynamicDeviceScaleFactor::url):
* TestWebKitAPI/mac/PlatformUtilitiesMac.mm:
(TestWebKitAPI::Util::createURLForResource):
Update calls to retrieve files from the bundle to look in the newly
created subdirectory.


Canonical link: https://commits.webkit.org/88911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100380 268f45cc-cd09-0410-ab3c-d52691b4dbfc